# scribe

./: .gitignore  AGENTS.md  AGENT_LOG.md  README.md  app_enhanced.py  app_pro.py  app_pro.py.backup  app_pro_main.py  app_simple_backup.py  devices.txt  list_devices.py  pyproject.toml  scribe.py  scribe.py.backup
config/: context_template.md
docs/: ARCHITECTURE_V1.md  mic_system_audio_mixing_plan.md  sprints.md
docs/architect/: 01_system_prompt_and_core_mandate.md  02_implementation_roadmap.md  03_asr_cleanup_normalization_and_correction.md  04_transcript_structuring.md  05_map_reduce_workflow.md  06_chain_of_density.md  07_hardware_and_async_orchestration.md  08_llm_selection_and_deployment.md  09_multimodal_extensions.md  10_error_mitigation_strategy.md
docs/context/: asr_output_enhancement.md  asynchronous_meeting_processing_pipeline.md  chain_of_density_prompting.md  detailed_upgrade_plan.md  domain_correction_fuzzy_matching.md  hardware_offloading_strategy.md  local_llm_selection_and_quantization.md  map_reduce_workflow_design.md  multimodal_meeting_summarization_research_plan.md  optimized_offline_asr_to_llm_pipeline_architecture.md  semantic_segmentation_texttiling.md  speaker_diarization.md
scripts/: check_agent_log.ps1  check_agent_log.sh  scribe-cli.py  scribe-gui.py  scribe.py
src/scribe/: __init__.py  cli.py  core.py  synthesis.py
src/scribe/core/: __init__.py  recorder.py  session.py  transcriber.py
src/scribe/gui/: __init__.py  app_pro.py
src/scribe/utils/: __init__.py  config.py  instance.py  logging.py  paths.py
