[project]
name = "scribe"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "colorama>=0.4.6",
    "faster-whisper>=1.2.1",
    "numpy<2.0",
    "nvidia-cudnn-cu12>=9.0.0",
    "soundcard>=0.4.2",
    "scipy>=1.10.0",
    "soundfile>=0.13.1",
    "tqdm>=4.67.1",
    "requests>=2.32.3",
]
