[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scribe"
version = "1.1.0"
description = "Real-time audio transcription and AI-powered meeting synthesis tool"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    {name = "Scribe Team"}
]
dependencies = [
    "colorama>=0.4.6",
    "faster-whisper>=1.2.1",
    "numpy<2.0",
    "nvidia-cudnn-cu12>=9.0.0",
    "soundcard>=0.4.2",
    "scipy>=1.10.0",
    "soundfile>=0.13.1",
    "tqdm>=4.67.1",
    "requests>=2.32.3",
    "customtkinter>=5.2.2",
    "pystray>=0.19.5",
    "pillow>=12.0.0",
    "PyYAML>=6.0",
    "psutil>=5.9.0",
]

[project.scripts]
scribe = "scribe.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/scribe"]
